Prevent svg clipping

--- a/scss/baseguide-demo.scss
+++ b/scss/baseguide-demo.scss
@@ -67,12 +67,16 @@ $mq-breakpoints: (
 .col--feature {
 	text-align: center;
 
-	p {
-		margin-bottom: 0;
-	}
-
 	& + & {
 		margin-top: 1.5em;
+	}
+
+	svg {
+		overflow: visible;
+	}
+
+	p {
+		margin-bottom: 0;
 	}
 
 	@include mq(sm) {
